Pinning the 'object data properties' doesn't work in the properties editor with empty image objects #69798

Closed
opened 2019-09-12 14:30:11 +02:00 by Lopo Isaac · 7 comments

Blender Version
Broken: version: 2.79, 2.80, 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: 492a7998d5
Worked: Never?

Short description of error
Pinning the 'object data properties' pannel of an empty image object doesn't work (the tab dissapears).

Exact steps for others to reproduce the error
Image provided >> https://drive.google.com/file/d/1i-ilbITrDqJ6aRs_kn8EDGE3wN9o8r3H/view?usp=sharing

  1. New file
  2. Add an empty >> image
  3. Go to properties editor >> object data properties
  4. Go up, right, and check the "pin" icon
**Blender Version** Broken: version: 2.79, 2.80, 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: `492a7998d5` Worked: Never? **Short description of error** Pinning the 'object data properties' pannel of an empty image object doesn't work (the tab dissapears). **Exact steps for others to reproduce the error** Image provided >> https://drive.google.com/file/d/1i-ilbITrDqJ6aRs_kn8EDGE3wN9o8r3H/view?usp=sharing 1) New file 2) Add an empty >> image 3) Go to properties editor >> object data properties 4) Go up, right, and check the "pin" icon
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Seems to work fine for me. Can you try the latest version again, please? If the issue persists, please upload a .blend file that we can use to reproduce it.

pin empty.gif

Also, please upload images directly in this site, instead of linking somewhere else.

Seems to work fine for me. Can you try the latest version again, please? If the issue persists, please upload a .blend file that we can use to reproduce it. ![pin empty.gif](https://archive.blender.org/developer/F7758452/pin_empty.gif) Also, please upload images directly in this site, instead of linking somewhere else.
Author

Hi Jacques! I have the latest version. Tried again but this behaviour persist. Can you please open also an image? There is no problem if I add an "empty image" with no images (like in your gif) but the behaviour I described appears if the empy image has an image asociated (sorry for explaining myself bad). Thank you very much for your time!

Hi Jacques! I have the latest version. Tried again but this behaviour persist. Can you please open also an image? There is no problem if I add an "empty image" with no images (like in your gif) but the behaviour I described appears if the empy image has an image asociated (sorry for explaining myself bad). Thank you very much for your time!
Member

Thanks, now I can reproduce the issue.

Thanks, now I can reproduce the issue.

This issue was referenced by 12915aad65

This issue was referenced by 12915aad65fbce5f4533abb1f9f510e88333a439

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2019-11-19 14:29:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69798
No description provided.